<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://tools.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="#F9F9FF"
    tools:context=".auth.VerificationActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#00236F"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_account_title"
        android:textColor="#151C27"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_account_instruction"
        android:textColor="#444651"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp" />

    <EditText
        android:id="@+id/etOtpCode"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/otp_hint"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="6"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#151C27"
        android:letterSpacing="0.2"
        android:autofillHints="smsOTPCode"
        tools:targetApi="O" />

    <Button
        android:id="@+id/btnVerifySubmit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00236F"
        android:text="@string/btn_verify"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

</LinearLayout>